# VINS-tree-BGL

./: README.md
camera_models/: CMakeLists.txt  package.xml
camera_models/include/camodocal/camera_models/: CameraFactory.h  PinholeCamera.h  PinholeFullCamera.h
camera_models/src/camera_models/: CameraFactory.cc  PinholeCamera.cc  PinholeFullCamera.cc
vins/: CMakeLists.txt  package.xml
vins/config/euroc/: euroc_stereo_imu_config.yaml
vins/launch/: vins_launch.py
vins/src/: rosNodeTest.cpp  tree.h  vins_node.cpp  vins_node.h
vins/src/estimator/: estimator.cpp  estimator.h  feature_manager.cpp  feature_manager.h  old_processmeasurements.cpp  parameters.cpp  parameters.h
vins/src/factor/: ICPCostFunction_p2l.cpp  ICPCostFunction_p2l.h  ICPCostFunction_p2p.cpp  ICPCostFunction_p2p.h  marginalization_factor.cpp  projectionTwoFrameTwoCamFactor.cpp
vins/src/featureTracker/: feature_tracker.cpp  feature_tracker.h
vins/src/initial/: initial_alignment.h  initial_sfm.cpp  solve_5pts.cpp
vins/src/utility/: visualization.cpp  visualization.h
vins/weights/: converter.py
